remove Manulife images

--- a/huu-ich/cac-loai-bao-hiem/index.html
+++ b/huu-ich/cac-loai-bao-hiem/index.html
@@ -264,10 +264,11 @@ data-ad-slot="5275186684">
   <p>Khi tham gia bảo hiểm thì mình đóng một khoản phí để khi có rủi ro sẽ nhận được số tiền bảo hiểm. Khoản phí đó dùng để chia sẻ rủi ro giữa những người cùng tham gia bảo hiểm: người gặp rủi ro nhận tiền của những người chưa gặp rủi ro. Mua bảo hiểm mà không gặp rủi ro cũng giống như đem tiền đi làm <a href="/huu-ich/chi-tieu">từ thiện</a>: giúp những người không may.
   <br><a href="/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">Tiền đóng bảo hiểm</a> cũng giống tiền mua vé số ở chỗ tiền của nhiều người góp lại đưa cho một số ít người. Nhưng bảo hiểm và xổ số khác nhau ở chỗ: người mua vé số muốn được nhận tiền thưởng, người tham gia bảo hiểm không mong nhận tiền bồi thường.
   <br>Khi xem bảo hiểm là phí thì mình phải tính sao cho tốn ít phí nhất mà vẫn đạt mục đích bảo hiểm.</p>
-  <div class="flright">
+<!--  <div class="flright">
     <amp-img alt="Bảo hiểm là cái phao trong cuộc sống" src="/images/BH-tuky.jpg" width="250" height="139" layout="responsive">
     </amp-img>
   </div>
+-->
   <p>Bảo hiểm sẽ giúp ta đỡ thiệt hại về tài chính khi có rủi ro xảy ra, chứ bảo hiểm không ngăn ngừa rủi ro.
   <br>Bảo hiểm cần cho cuộc sống giống như phao cứu sinh cần cho hành khách trên sông biển. Không phải thuyền nào cũng sẽ chìm, nhưng khi chìm mà không có phao thì nguy. Không phải ai cũng sẽ gặp rủi ro, nhưng khi gặp rủi ro mà không có đủ tiền thì mạt.
   <br>Bảo hiểm chỉ nhận giúp ta khi rủi ro chưa xảy ra và chưa có dấu hiệu của rủi ro; do đó ta chỉ mua bảo hiểm khi còn mạnh khoẻ, khi không còn khoẻ thì khó mua được bảo hiểm. Thuyền phải trang bị phao trước khi rời bến, chứ không nên đợi đến khi nước tràn vào mới tìm mua phao.
