--- a/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
+++ b/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
@@ -231,7 +231,8 @@ data-ad-slot="5275186684">
     <li>quỹ bảo hiểm rủi ro: dùng để trả cho những khách hàng gặp rủi ro theo điều khoản của hợp đồng</li>
     <li>chi phí và lợi nhuận của công ty bảo hiểm</li>
   </ol>
-  <div><amp-img alt="Phí Bảo hiểm Nhân thọ" src="/images/phibaohiemnhantho.png" width="650" height="428" layout="responsive"></amp-img></div>
+<!--  <div><amp-img alt="Phí Bảo hiểm Nhân thọ" src="/images/phibaohiemnhantho.png" width="650" height="428" layout="responsive"></amp-img></div>
+-->
   <p>Tỉ lệ giữa ba phần trong phí đóng vào thay đổi theo tuổi của người được bảo hiểm khi ký hợp đồng.
   <br>Trong những sản phẩm bảo hiểm nhân thọ kiểu <i>truyền thống</i> (có giá trị hoàn lại tương đương số tiền bảo hiểm, thời hạn đóng phí cố định, mức phí cố định) thì phần thứ nhất chiếm tỉ lệ lớn nhất trong tổng số tiền đóng vào. Công ty bảo hiểm đem số tiền này cho vay sinh lời. Tiền lời đó cộng với khoản dư (nếu có) từ quỹ bảo hiểm rủi ro trong năm sẽ được chia cho từng hợp đồng gọi là bảo tức. Công ty bảo hiểm nhân thọ giữ bảo tức đó để cho vay sinh lời tiếp, cho nên mỗi năm người chủ hợp đồng nhận được bảo tức của năm đó và lãi của bảo tức tích luỹ đến năm trước. Những hợp đồng lâu năm thì tổng số bảo tức và tiền lời tích luỹ sẽ lớn hơn số tiền bảo hiểm nhiều lần, điều này sẽ bù đắp cho sự trượt giá.</p>
 
@@ -288,9 +289,10 @@ Cách Manulife tính bảo tức minh bạch và dễ hiểu hơn cách Prudenti
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -319,6 +321,7 @@ Cách Manulife tính bảo tức minh bạch và dễ hiểu hơn cách Prudenti
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
