--- a/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
+++ b/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
@@ -240,7 +240,8 @@ data-ad-slot="5275186684">
     <li>linh hoạt thay đổi tỉ lệ tích luỹ và bảo hiểm</li>
     <li>có thể tạm ngưng đóng phí</li>
   </ol>
-  <div><amp-img alt="Nguyên lý Bảo hiểm Nhân thọ Liên kết chung" src="/images/BHNTLKC.jpg" width="1086" height="549" layout="responsive"></amp-img><br>Nguyên lý Bảo hiểm Nhân thọ Liên kết chung</div>
+<!--  <div><amp-img alt="Nguyên lý Bảo hiểm Nhân thọ Liên kết chung" src="/images/BHNTLKC.jpg" width="1086" height="549" layout="responsive"></amp-img><br>Nguyên lý Bảo hiểm Nhân thọ Liên kết chung</div>
+-->
 
 
   <p>Hợp đồng bảo hiểm nhân thọ truyền thống chỉ bắt đầu có <a href="phi-bao-hiem-nhan-tho">giá trị hoàn lại và bảo tức</a> sau khi đóng phí hơn một năm. Giá trị hoàn lại và bảo tức trong những năm đầu rất nhỏ so với phí đóng vào. Do đó người ta thường nói huỷ hợp đồng bảo hiểm trong những năm đầu thì lỗ nặng.
@@ -265,7 +266,8 @@ data-ad-slot="5275186684">
 
 
   <p><b>Kết luận:</b></p>
-  <div class="flright"><amp-img alt="Manulife Gia Đình Tôi Yêu" src="/images/GDTY.svg" width="400" height="300" layout="responsive"></amp-img></a></div>
+<!--  <div class="flright"><amp-img alt="Manulife Gia Đình Tôi Yêu" src="/images/GDTY.svg" width="400" height="300" layout="responsive"></amp-img></a></div>
+-->
   <p>Các đặc tính mới của bảo hiểm nhân thọ liên kết chung giúp khách hàng sử dụng hợp đồng bảo hiểm linh hoạt hơn, nếu khách không dùng đến các đặc tính đó thì tác dụng bảo hiểm và tích luỹ cũng tương đương như hợp đồng bảo hiểm truyền thống.
   <br>Tính linh hoạt cũng như con dao hai lưỡi, nếu khách hàng dùng các đặc tính linh hoạt mà thiếu kỷ luật tiết kiệm thì tác dụng tích luỹ sẽ kém nhiều.
   <br style="clear:both">Với những ưu điểm như vậy thì người ta có thể <span class="tmark">dùng bảo hiểm nhân thọ liên kết chung để làm gì</span>?
@@ -295,9 +297,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -326,6 +329,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
