--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -227,7 +227,8 @@ data-ad-slot="5275186684">
 <!-- body here -->
   <h1>Những kiến-thức hữu-ích cho mọi-người</h1>
   <h2>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h2>
-  <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
+<!--  <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
+-->
   <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, vì lúc đó có muốn làm cũng không có đủ sức mà làm.
   <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.
   <br style="clear:both"><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và tích-luỹ từ-từ.
@@ -268,9 +269,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -299,6 +301,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
