remove Manulife images

--- a/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu.html
+++ b/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu.html
@@ -228,8 +228,9 @@ data-ad-slot="5275186684">
   <div class="title">Loại két sắt biết ấp cho tiền nở nhanh</div>
   <div class="right">Viết lần đầu trong Tháng Mười, 2017.</div>
   <h2>Những nơi cất tiền</h2>
-  <div class="flright"><amp-img alt="Manulife Điểm Tựa Đầu Tư" src="/images/DTDT.svg" width="400" height="300" layout="responsive"></amp-img></a>
+<!--  <div class="flright"><amp-img alt="Manulife Điểm Tựa Đầu Tư" src="/images/DTDT.svg" width="400" height="300" layout="responsive"></amp-img></a>
   </div>
+-->
   <p>Trong xã hội ngày nay, muốn sống được thì phải có tiền. Vì vậy mọi người có sức lao động đều phải làm việc để kiếm tiền, và còn phải giữ tiền để có cái mà tiêu trong tương lai như chuẩn bị cho con lập nghiệp hoặc cho chính mình khi hết sức lao động. Giữ tiền không đơn giản là cất trong tủ, khoá kỹ lại. Giữ tiền kiểu đó rất mệt, mệt vì sợ mất, mệt vì phải kiếm nhiều tiền bù vào lạm phát, mệt vì phải giữ quá nhiều.
   <br style="clear:both">Có những cách giữ tiền đỡ mệt hơn như là mua vàng, mua USD để cất. Đỡ mệt hơn nhưng cũng chưa phải là đỡ nhất. Một số người biến tiền thành đất đai nhà cửa để nó nở ra nhanh, việc này còn mệt hơn nữa, và không khéo thì nó không nở ra mà teo lại. Theo tôi cách giữ tiền đỡ mệt nhất là đưa người khác giữ, những người mà biết làm cho tiền nở nhanh. Ngân hàng là một trong những nơi giữ tiền và làm cho tiền nở ra, nhưng không nở nhanh lắm.</p>
   <p>Xã hội phát triển thì cũng có những cách làm cho tiền nở nhanh hơn ngân hàng, dễ dàng và an toàn. Đó là <a href="../dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>.</p>
