--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -187,18 +187,19 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <!-- body here -->
   <h1>Những kinh-nghiệm linh-tinh trong cuộc-sống</h1>
 <dl>
-  <dt><a href="/kinh-nghiem/linh-tinh/can-biet">Những điều NÊN và KHÔNG NÊN làm trong thời Internet</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nutrition'>Dinh dưỡng, vận động và kiểm soát sức khoẻ</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a></dt>
-  <dt><a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Chơi với tia hồng ngoại</a></dt>
+  <dt><a href="can-biet">Những điều NÊN và KHÔNG NÊN làm trong thời Internet</a></dt>
+  <dt><a href='bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a></dt>
+  <dt><a href='ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
+  <dt><a href='tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
+  <dt><a href='dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
+  <dt><a href='nutrition'>Dinh dưỡng, vận động và kiểm soát sức khoẻ</a></dt>
+  <dt><a href='magchan'>Dùng thử Magchan để giặt</a></dt>
+  <dt><a href='lau-nha'>Cách lau-nhà cho sạch đều khắp nhà</a></dt>
+  <dt><a href='may-lanh'>Hiểu rõ Máy lạnh</a></dt>
+  <dt><a href='nong'>Bàn về tình trạng nóng</a></dt>
+  <dt><a href='nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a></dt>
+  <dt><a href='tan-so-cua-tv'>Tần số của TV</a></dt>
+  <dt><a href='hong-ngoai'>Chơi với tia hồng ngoại</a></dt>
 </dl>
   <br>
   <br>
