--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -197,7 +197,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dd>Tiền-điện-tử Pi: một dự án làm ra đồng tiền dùng để giao dịch chung cho toàn thế giới. Bạn hãy nhận tiền Pi mỗi ngày.</dd>
   <dt><a href='cryptocurrency'>Hỏi đáp về Cryptocurrency</a></dt>
   <dd>Tìm hiểu Cryptocurrency: là gì, giữ như thế nào, trao đổi như thế nào, lợi và hại.</dd>
-  <dt><a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a></dt>
+  <dt><a href="vi-dien-tu">Nhận-xét các ví-điện-tử</a></dt>
   <dd>Nhận-xét ban-đầu về vài ví-điện-tử ở Việt-Nam: MoMo, ZaloPay, ViettelPay, GrabPay-by-Moca.</dd>
   <dt><a href='gnucash'>Dùng GnuCash để quản lý tài sản gia đình</a></dt>
   <dd>Giới thiệu GnuCash, phần mềm để kiểm soát thu chi, quản lý tài sản gia đình.</dd>
