--- a/sitemap.html
+++ b/sitemap.html
@@ -237,6 +237,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a><br>
       <a href='/kinh-nghiem/linh-tinh/nutrition'>Dinh dưỡng, vận động và kiểm soát sức khoẻ</a><br>
       <a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a><br>
+      <a href='/kinh-nghiem/linh-tinh/lau-nha'>Cách lau-nhà cho sạch đều khắp nhà</a><br>
       <a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a><br>
       <a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a><br>
       <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a><br>
