--- a/y-kien/index.html
+++ b/y-kien/index.html
@@ -188,31 +188,31 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <!-- body here -->
   <h1>Những suy-nghĩ về các vấn-đề trong xã-hội</h1>
 <dl>
-  <dt><a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a></dt>
+  <dt><a href='su-giau-co'>Các nguồn gốc của sự giàu có</a></dt>
   <dd>Các nguồn gốc của sự giàu có, công thức làm giàu dành cho tất cả mọi người</dd>
-  <dt><a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay nghĩa là gì?</a></dt>
+  <dt><a href='bat-ca-hai-tay'>Bắt cá hai tay nghĩa là gì?</a></dt>
   <dd>Bắt cá hai tay nghĩa là gì? Có nên bắt cá hai tay?</dd>
-  <dt><a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a></dt>
+  <dt><a href='xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a></dt>
   <dd>Viễn cảnh: Một xã hội thông tin ở Việt Nam. CNTT đem lại những ích lợi cho con người.</dd>
-  <dt><a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a></dt>
+  <dt><a href='bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a></dt>
   <dd>Bàn về bí-mật đời-tư. Những điều gì cần giữ bí mật, những điều gì không cần giữ bí mật. Đừng quá lo lắng về những chi tiết.</dd>
-  <dt><a href='/y-kien/quang-cao-lao'>Hãy chặn quảng-cáo có-hại trên Internet</a></dt>
+  <dt><a href='quang-cao-lao'>Hãy chặn quảng-cáo có-hại trên Internet</a></dt>
   <dd>Mỗi người hãy cùng-nhau góp-sức chặn quảng-cáo có-hại trên Internet bằng cách báo-cáo.</dd>
-  <dt><a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a></dt>
+  <dt><a href='dung-hang-viet-nam'>Dùng hàng Việt</a></dt>
   <dd>Dùng hàng Việt Nam để làm lợi cho chính mình và người thân</dd>
-  <dt><a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a></dt>
+  <dt><a href='muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a></dt>
   <dd>Điều quan trọng nhất ở mỗi người là khả năng phân biệt</dd>
-  <dt><a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a></dt>
+  <dt><a href='thanh-ngu-ve-tien'>Thành ngữ về tiền</a></dt>
   <dd>Áp dụng những thành ngữ về tiền vào cuộc sống hiện nay</dd>
-  <dt><a href='/y-kien/tien-va-mau'>Tiền và Máu trong cuộc sống</a></dt>
+  <dt><a href='tien-va-mau'>Tiền và Máu trong cuộc sống</a></dt>
   <dd>Những điều giống nhau và khác nhau giữa Tiền và Máu</dd>
-  <dt><a href='/y-kien/gia-tra'>Thế giới đầy những giả trá</a></dt>
+  <dt><a href='gia-tra'>Thế giới đầy những giả trá</a></dt>
   <dd>Thế giới đầy những giả trá, kỹ nghệ càng phát triển thì càng nhiều thứ giả</dd>
-  <dt><a href='/y-kien/nhung-cai-nem'>Những cái nêm trên đường phố</a></dt>
+  <dt><a href='nhung-cai-nem'>Những cái nêm trên đường phố</a></dt>
   <dd>Cái nêm là gì? Ai đã tạo ra những cái nêm trên đường phố</dd>
-  <dt><a href='/y-kien/khac-nguoi'>Cư xử khác người là tốt hay xấu?</a></dt>
+  <dt><a href='khac-nguoi'>Cư xử khác người là tốt hay xấu?</a></dt>
   <dd>Có nên cư xử khác người? Cư xử khác người như thế nào?</dd>
-  <dt><a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a></dt>
+  <dt><a href='da-len-bao'>Những ý-kiến đã đăng báo</a></dt>
   <dd>Các bài viết của tôi đã được đăng báo Sài Gòn Tiếp Thị và các báo khác</dd>
 </dl>
   <br>
