--- a/kinh-nghiem/chu-viet/index.html
+++ b/kinh-nghiem/chu-viet/index.html
@@ -188,10 +188,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <!-- body here -->
   <h1>Kinh-nghiệm dùng chữ Việt trên máy-tính</h1>
 <dl>
-  <dt><a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1'>Vị-trí dấu-thanh</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/unicode'>Chữ Việt trong Unicode</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/utf-8'>Chữ Việt và UTF-8</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/web'>Web Chữ Việt</a></dt>
+  <dt><a href='ghi-dau-thanh-1'>Vị-trí dấu-thanh</a></dt>
+  <dt><a href='unicode'>Chữ Việt trong Unicode</a></dt>
+  <dt><a href='utf-8'>Chữ Việt và UTF-8</a></dt>
+  <dt><a href='web'>Web Chữ Việt</a></dt>
 </dl>
   <br>
   <br>
