--- a/kinh-nghiem/linh-tinh/lau-nha.html
+++ b/kinh-nghiem/linh-tinh/lau-nha.html
@@ -181,7 +181,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     }, {
       "@type": "HowToStep",
       "name": "Xả sạch các cây-lau-nhà",
-      "text": "Xả sạch các cây-lau-nhà ba lần"
+      "text": "Xả sạch các cây-lau-nhà ba lần",
       "url": "https://lehboi.github.io/kinh-nghiem/linh-tinh/lau-nha#xa"
     }
   ]
