--- a/home/cv.html
+++ b/home/cv.html
@@ -262,7 +262,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <p>Có kinh-nghiệm làm-việc với người ngoại-quốc qua các chuyến-công-tác ở Đức, Canada, Nhật, Thái-Lan, Pháp.</p>
 
   <h3>Từ Tháng Ba năm 2011 đến Tháng Bảy năm 2021 <a href="https://www.manulife.com.vn/" target="_blank">Manulife</a>, Việt-Nam</h3>
-  <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a> (miễn-phí), tư-vấn các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ-mở</a>, <a href="/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a>, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">Gia Đình Tôi Yêu</a>.</p>
+  <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a> (miễn-phí), tư-vấn các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ-mở</a>, Điểm Tựa Đầu Tư, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">Gia Đình Tôi Yêu</a>.</p>
 
   <h3>Từ Tháng Mười Một năm 2006 đến Tháng Mười Hai năm 2015 <a href="https://netnam.com/" target="_blank">Netnam</a>, Việt-Nam</h3>
   <p>Tư-vấn-kỹ-thuật-mạng</p>
@@ -328,7 +328,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
 
   <h2>Bằng-cấp &amp; Chứng-chỉ</h2>
   <h3>Tháng 1, 2014: Chứng-chỉ chương-trình <a href="/huu-ich/tien-thuong-cuoi-nam">Bảo-hiểm Hưu-trí</a></h3>
-  <h3>Tháng 6, 2012: Chứng-chỉ chương-trình <a href="/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">Bảo-hiểm Liên-kết Đầu-tư</a></h3>
+  <h3>Tháng 6, 2012: Chứng-chỉ chương-trình Bảo-hiểm Liên-kết Đầu-tư</h3>
   <h3>Tháng 3, 2011: Chứng-chỉ đào-tạo đại-lý <a href="/huu-ich/cac-loai-bao-hiem/">bảo-hiểm</a></h3>
   <h3>2001-2002: Khoá-học Quản-trị cho giám-đốc</h3>
   <h3>2000-2001: Khoá-học ISO 9000</h3>
