--- a/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
+++ b/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
@@ -255,7 +255,7 @@ data-ad-slot="5275186684">
 
 
   <p>Hợp đồng bảo hiểm nhân thọ truyền thống được tính sẵn sao cho số tiền bảo hiểm gần bằng giá trị hoàn lại (như vậy khách hàng chắc chắn sẽ có số tiền đã định), tỉ lệ giữa số tiền đó và phí đóng hàng năm do chương trình máy tính định sẵn và phí đóng vào không đổi suốt thời hạn hợp đồng.
-  <br>Hợp đồng bảo hiểm nhân thọ liên kết chung không có ràng buộc như vậy, khách hàng được chọn và được thay đổi tỉ lệ giữa số tiền bảo hiểm trên phí đóng vào. Khách hàng có thể chọn số tiền bảo hiểm cao, phí đóng thấp để hợp đồng có <span class="tmark">tính bảo vệ cao</span>. Khách hàng có thể chọn số tiền bảo hiểm thấp, phí đóng cao để hợp đồng có <span class="tmark">tính tích luỹ cao</span>. Giữa hai thái cực đó, khách hàng có thể chọn những tỉ lệ thích hợp cho gia đình mình trong <a href="../cac-giai-doan">từng giai đoạn</a>. Có thể nói rằng <i>không có dịch vụ nào thay thế được bảo hiểm nhân thọ về mặt bảo vệ tài chính</i> và cũng <i>ít có dịch vụ nào tốt hơn bảo hiểm nhân thọ về mặt tích luỹ tài sản dài hạn</i>.
+  <br>Hợp đồng bảo hiểm nhân thọ liên kết chung không có ràng buộc như vậy, khách hàng được chọn và được thay đổi tỉ lệ giữa số tiền bảo hiểm trên phí đóng vào. Khách hàng có thể chọn số tiền bảo hiểm cao, phí đóng thấp để hợp đồng có <span class="tmark">tính bảo vệ cao</span>. Khách hàng có thể chọn số tiền bảo hiểm thấp, phí đóng cao để hợp đồng có <span class="tmark">tính tích luỹ cao</span>. Giữa hai thái cực đó, khách hàng có thể chọn những tỉ lệ thích hợp cho gia đình mình trong từng giai đoạn. Có thể nói rằng <i>không có dịch vụ nào thay thế được bảo hiểm nhân thọ về mặt bảo vệ tài chính</i> và cũng <i>ít có dịch vụ nào tốt hơn bảo hiểm nhân thọ về mặt tích luỹ tài sản dài hạn</i>.
   <br>Dịch vụ tiết kiệm ở ngân hàng chỉ tốt trong kỳ hạn dưới 1-2 năm. Khi <a href="../tich-luy">tích luỹ dài hạn</a> 15-30 năm, gửi ở ngân hàng sẽ khó đạt được mục tiêu đề ra vì:</p>
   <ol>
     <li>Khách hàng không nhớ gửi tiền vào ngân hàng còn công ty bảo hiểm nhắc khách hàng tiết kiệm đều đặn.</li>
@@ -279,7 +279,6 @@ data-ad-slot="5275186684">
   <br>* <a href="phi-bao-hiem-nhan-tho">Tiền đóng BHNT sẽ đi đâu?</a>
   <br>* <a href="../dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
   <br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
-  <br>* <a href="../cac-giai-doan">Các giai đoạn trong cuộc đời</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
 
 
