--- a/huu-ich/chi-tieu.html
+++ b/huu-ich/chi-tieu.html
@@ -249,7 +249,7 @@ data-ad-slot="5275186684">
     <li><strong><span class="tblue">FFA</span></strong>: Để dành cho mục-đích <b><span class="tblue">tự-do-tài-chính</span></b> (khoảng <strong><span class="tblue">10%</span></strong>), tiền này sẽ được đem đi đầu-tư sinh lời, không bao giờ tiêu khoản-tiền này cho tới khi đạt được sự-tự-do về tài-chính</li>
   </ol>
   <p>Kế-hoạch-chi-tiêu này sẽ giúp bạn thoả-mãn các nhu-cầu thiết-yếu, nhu-cầu hưởng-thụ trước mắt, nhu-cầu hưởng-thụ lớn mà vẫn còn có để nâng-cao trình-độ, giúp-đỡ người quanh mình và <span class="tblue">đầu-tư cho tương-lai chính mình</span>. Khi <i>tất cả</i> những nhu-cầu đều được thoả-mãn thì bạn sẽ cảm-thấy <i>hạnh-phúc</i> với thu-nhập của mình dù cho thu-nhập đó ít hay nhiều.</p>
-  <p>Điều quan-trọng trong cách chi-tiêu này là phải có đủ sáu khoản trên; không nhất-thiết phải chia theo đúng tỉ-lệ như trên. Tỉ-lệ trên chỉ là một gợi-ý cho những trường-hợp chung; bạn có thể thay-đổi đôi-chút cho phù-hợp với khả-năng và mục-đích trong những <a href="cac-giai-doan">giai-đoạn khác-nhau của cuộc-đời</a>.
+  <p>Điều quan-trọng trong cách chi-tiêu này là phải có đủ sáu khoản trên; không nhất-thiết phải chia theo đúng tỉ-lệ như trên. Tỉ-lệ trên chỉ là một gợi-ý cho những trường-hợp chung; bạn có thể thay-đổi đôi-chút cho phù-hợp với khả-năng và mục-đích trong những giai-đoạn khác-nhau của cuộc-đời.
   Bạn có-thể dùng bảng-tính KHTC để lập những khoản phải chi trong tương lai xem để bao-nhiêu phần thu-nhập vào <i>tự-do tài-chính</i> là đủ cho tương-lai (xem <a href="ke-hoach-tai-chinh/">Kế-hoạch-tài-chính</a>). Sau khi tính-toán được các tỉ lệ phân bổ cho sáu khoản trên rồi thì bạn hãy thực hiện nó một cách <i>kỷ luật</i>, đừng tuỳ tiện co giãn theo sự <i>chi tiêu tự do</i> hàng tháng. Để bớt bị cám dỗ chi tiêu tự do thì nên trích tiền gửi đầu tư ngay khi có thu nhập, đừng đợi chi tiêu xong rồi mới đem phần dư gửi đầu tư. Đó gọi là <a href="cau-chuyen/bat-dau-dau-tu">trả tiền cho chính mình trước</a>.</p>
 
 
@@ -315,7 +315,6 @@ data-ad-slot="5275186684">
     Các bài liên quan:
     <br>* <a href="tich-luy">Tích-luỹ tiền để đủ sống trọn-đời</a>
     <br>* <a href="ke-hoach-tai-chinh/">Lập kế-hoạch ổn-định tài-chính suốt-đời thật đơn-giản</a>
-    <br>* <a href="cac-giai-doan">Các giai-đoạn trong cuộc-đời</a>
     <br>* <a href="cau-chuyen/bat-dau-dau-tu">Đầu-tư để ổn-định tương-lai</a>
     <br>* <a href="cau-chuyen/nhung-hon-da">Độ ưu-tiên của các kế-hoạch tài-chính</a>
     <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ-đầu-tư cho lợi-nhuận cao hơn gửi ngân-hàng</a>
