--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -245,7 +245,7 @@ data-ad-slot="5275186684">
   <ul>
     <li>Lập <a href="ke-hoach-tai-chinh/">kế-hoạch-tài-chính</a> trọn-đời</li>
     <li>So-sánh <a href="tich-luy-dai-han">các công-cụ tích-luỹ dài-hạn</a></li>
-    <li><a href="cac-giai-doan">Các giai-đoạn khác nhau trong đời-người</a> và <a href="cau-chuyen/nhung-hon-da">những hòn-đá của cuộc-đời</a></li>
+    <li><a href="cau-chuyen/nhung-hon-da">Những hòn-đá của cuộc-đời</a></li>
     <li><a href="dung-so-dau-tu">Bắt-đầu đầu-tư từ đâu?</a></li>
     <li><a href="hieu-qua-dau-tu">Hiệu-quả của những vụ đầu-tư của tôi</a></li>
     <li><a href="lam-phat-loi-song">Kiểm-soát mức tăng chi-tiêu theo thời-gian</a> cần có <a href="nghi-luc">nghị-lực</a></li>
