--- a/huu-ich/ke-hoach-tai-chinh/huu-tri.html
+++ b/huu-ich/ke-hoach-tai-chinh/huu-tri.html
@@ -231,7 +231,7 @@ data-ad-slot="5275186684">
   <h1>Tính Quỹ Hưu trí</h1>
 <p><a href="thu-chi">Bước một ở trên</a> đã tính được chi
 tiêu hàng năm hiện nay trong ô H31 trang Thu-chi, bây giờ mở trang Hưu-trí của <a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">bảng tính</a>. Mục đích của phép tính này là tính số tiền cần có khi về hưu để bạn có một mức sống tương đương với mức sống hiện nay, vì lý do trượt giá nên số tiền dùng hàng tháng khi về hưu sẽ lớn hơn số tiền bạn dùng hiện nay.<br />
-Khi về hưu, sẽ có những khoản chi ít hơn hiện nay (ví dụ như bớt khoản chăm sóc con) và có thể phát sinh những khoản chi mới (ví dụ như chi tiêu chữa bệnh), hãy chọn một hệ số, ghi vào ô B2 làm tỉ lệ giữa chi tiêu lúc về hưu và chi tiêu hiện nay. Tỉ lệ B2 này phụ thuộc vào việc bạn đang ở trong <a href="../cac-giai-doan">giai đoạn nào của cuộc đời</a>. Ô B3 là chi tiêu hàng năm hiện nay nhân với hệ số đã chọn, chia cho 12, đây là mức chi tiêu hàng tháng dự kiến khi về hưu nhưng tính theo mức giá hiện nay.</p>
+Khi về hưu, sẽ có những khoản chi ít hơn hiện nay (ví dụ như bớt khoản chăm sóc con) và có thể phát sinh những khoản chi mới (ví dụ như chi tiêu chữa bệnh), hãy chọn một hệ số, ghi vào ô B2 làm tỉ lệ giữa chi tiêu lúc về hưu và chi tiêu hiện nay. Tỉ lệ B2 này phụ thuộc vào việc bạn đang ở trong giai đoạn nào của cuộc đời. Ô B3 là chi tiêu hàng năm hiện nay nhân với hệ số đã chọn, chia cho 12, đây là mức chi tiêu hàng tháng dự kiến khi về hưu nhưng tính theo mức giá hiện nay.</p>
 <blockquote>
 <u>Gợi ý</u>: nếu bạn chưa lập gia đình hoặc mới lập gia đình thì B2 khoảng 1,5, nếu bạn đang nuôi con thì B2 khoảng 0,7, nếu con bạn đã trưởng thành thì B2 khoảng 1,1.
 </blockquote>
