--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
-          <a href="huu-ich/hieu-qua-dau-tu"><amp-img src="images/goldcoingrow.jpg" layout="responsive" height="233" width="350" alt="Long-term investment"></amp-img></a>
-          <div class="center"><h3>Tính hiệu-quả khi đầu-tư</h3></div>
-          <p>So-sánh <a href="huu-ich/hieu-qua-dau-tu">hiệu-quả các vụ đầu-tư</a> từ năm 2002 của tôi.
-          <br>Hiệu-quả của việc đầu-tư được tính bằng tốc-độ tăng tài-sản chứ không phải lượng tài-sản tăng thêm.
+          <a href="huu-ich/tich-luy-dai-han"><amp-img src="images/Mutual-Fund.jpg" layout="responsive" width="500" height="400" alt="Tích luỹ tài sản"></amp-img></a>
+          <div class="center"><h3>So-sánh công-cụ tích-luỹ dài-hạn</h3></div>
+          <p>Kênh nào gia-tăng giá-trị tài-sản tốt nhất <a href="huu-ich/tich-luy-dai-han">trong dài-hạn</a>:
+          <br> vàng, ngoại-tệ, sổ-tiết-kiệm, bất-động-sản, cổ-phiếu, quỹ-đầu-tư?
           </p>
         </div>
       </div>
@@ -303,6 +303,61 @@ div.footer { font-size: 80%; color: red; text-align: center; }
           <div class="center"><h3>Gửi ngân-hàng hay quỹ-đầu-tư</h3></div>
           <p>So-sánh lợi-nhuận của <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">gửi tiết-kiệm và quỹ-đầu-tư</a>.
           <br>Gửi ngân-hàng ngắn-hạn và gửi quỹ-đầu-tư dài-hạn là thích-hợp nhất.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="huu-ich/cach-dau-tu"><amp-img src="images/cach-dau-tu.png" layout="responsive" width="350" height="233" alt="Những cách đầu-tư"></amp-img></a>
+          <div class="center"><h3>Phân-biệt những cách đầu-tư</h3></div>
+          <p>Mỗi người cần chọn một số <a href="huu-ich/cach-dau-tu">cách đầu-tư</a> thích-hợp nhất với hoàn-cảnh và khả-năng để gia-tăng tài-sản.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="huu-ich/hieu-qua-dau-tu"><amp-img src="images/goldcoingrow.jpg" layout="responsive" height="233" width="350" alt="Long-term investment"></amp-img></a>
+          <div class="center"><h3>Tính hiệu-quả khi đầu-tư</h3></div>
+          <p>So-sánh <a href="huu-ich/hieu-qua-dau-tu">hiệu-quả các vụ đầu-tư</a> từ năm 2002 của tôi.
+          <br>Hiệu-quả của việc đầu-tư được tính bằng tốc-độ tăng tài-sản chứ không phải lượng tài-sản tăng thêm.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="huu-ich/ke-hoach-tai-chinh/khtcp1"><amp-img src="images/KHTCp1.png" layout="responsive" width="600" height="371" alt="Kế-hoạch tích-luỹ"></amp-img></a>
+          <div class="center"><h3>Kế-hoạch tích-luỹ</h3></div>
+          <p>Công cụ tính toán giúp bạn tìm ra một tỷ-lệ tối-ưu chi-tiêu so với thu-nhập để <a href="huu-ich/ke-hoach-tai-chinh/khtcp1">tích-luỹ cho các kế-hoạch chi-tiêu trong tương-lai</a>: mua nhà, mua xe, cho con, cho tuổi già.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="kinh-nghiem/may-tinh/ham-tai-chinh"><amp-img src="images/ham-tai-chinh.png" layout="responsive" width="350" height="233" alt="Các phép tính tài chính cần biết"></amp-img></a>
+          <div class="center"><h3>Các phép tính tài chính cần biết</h3></div>
+          <p>Trong các phần mềm bảng tính (spreadsheet) có một nhóm <a href="kinh-nghiem/may-tinh/ham-tai-chinh">hàm để tính các thông số về tài chính</a> và đầu tư, mỗi người nên biết để dùng trong các trường hợp thường gặp trong cuộc sống.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="y-kien/su-giau-co"><amp-img src="images/giau-co.png" layout="responsive" width="350" height="233" alt="Các nguồn gốc của sự giàu có"></amp-img></a>
+          <div class="center"><h3>Các nguồn gốc của sự giàu có</h3></div>
+          <p>Khi nói về một người rất giàu, bạn thường nghe những câu như "nhà đó giàu lắm, có của ăn mấy đời không hết". <a href="y-kien/su-giau-co">Tại sao lại có người giàu như vậy?</a> 
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="y-kien/xa-hoi-thong-tin"><amp-img src="images/CCCD1.jpg" layout="responsive" width="452" height="267" alt="Mẫu căn cước công dân"></amp-img></a>
+          <div class="center"><h3>Một xã hội thông tin ở Việt Nam</h3></div>
+          <p>Viễn cảnh về <a href="y-kien/xa-hoi-thong-tin">một xã hội thông tin ở Việt Nam</a>, mọi thông tin của mỗi cá nhân đều nằm trong hệ thống máy tính, không cần photocopy, công chứng sao y.
           </p>
         </div>
       </div>
@@ -325,7 +380,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
 
