--- a/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
+++ b/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
@@ -252,7 +252,7 @@ data-ad-slot="5275186684">
     <li>bình tĩnh khi Bệnh đến với mình </li>
   </ul>
   <p>Từ đâu tôi có khoản để dành? Từ việc <a href="/huu-ich/ke-hoach-tai-chinh/">chi tiêu có kế hoạch</a>. Nếu không để dành đủ cho con học hành đến khi thành tài thì lại là một sự thiếu trách nhiệm khác.
-  <br>Có một phương tiện rất tốt để đối phó với Lão và Bệnh cùng một lúc, đó là loại <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">bảo hiểm nhân thọ liên kết quỹ đầu tư</a>: vừa nhanh chóng tạo ra một khoản bảo hiểm lớn từ vài chục ngàn đồng mỗi ngày, vừa sinh lời cao để có nhiều tiền dùng khi già.
+  <br>Có một phương tiện rất tốt để đối phó với Lão và Bệnh cùng một lúc, đó là loại bảo hiểm nhân thọ liên kết quỹ đầu tư: vừa nhanh chóng tạo ra một khoản bảo hiểm lớn từ vài chục ngàn đồng mỗi ngày, vừa sinh lời cao để có nhiều tiền dùng khi già.
   <br>Tôi vẫn thường xuyên đánh giá lại sự chuẩn bị của mình để điều chỉnh số tiền cho thích hợp.</p>
 
 
@@ -264,7 +264,6 @@ data-ad-slot="5275186684">
   <br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
   <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
   <br>* <a href="../cac-loai-bao-hiem/">Bảo vệ tài sản trước những bất trắc</a>
-  <br>* <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Bảo hiểm nhân thọ liên kết quỹ đầu tư</a>
   <br>* <a href="/huu-ich/cau-chuyen/">Những câu chuyện khác</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132813023192608768" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376826242482990" rel="nofollow" target="_blank">Facebook</a></div>
 
@@ -281,9 +280,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -312,6 +312,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
