--- a/sitemap.html
+++ b/sitemap.html
@@ -146,7 +146,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
-    <a href='/huu-ich/cac-giai-doan'>Các giai-đoạn của cuộc-đời</a><br>
     <a href='/huu-ich/chi-tieu'>Chi-tiêu có kế-hoạch</a><br>
     <a href='/huu-ich/nghi-luc'>Nghị-lực để có dư tiền</a><br>
     <a href='/huu-ich/lam-phat-loi-song'>Lạm-phát-lối-sống</a><br>
@@ -154,7 +153,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/huu-ich/tich-luy-dai-han'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
     <a href='/huu-ich/lam-giau-khong-kho'>Làm-giàu không khó</a><br>
     <a href='/huu-ich/de-tien-vao-dau'>Để tiền vào đâu</a><br>
-    <a href='/huu-ich/cach-dau-tu'>Những cách đầu-tư</a><br>
+    <a href='/huu-ich/cach-dau-tu'>Phân-biệt những cách đầu-tư</a><br>
     <a href='/huu-ich/dung-so-dau-tu'>Đừng sợ chữ đầu-tư</a><br>
     <a href='/huu-ich/hieu-qua-dau-tu'>Tính hiệu-quả của việc đầu-tư</a><br>
     <a href='/huu-ich/vao-dai-hoc'>Chuẩn-bị vào đại-học và vào đời</a><br>
