--- a/y-kien/quang-cao-lao.html
+++ b/y-kien/quang-cao-lao.html
@@ -230,7 +230,7 @@ data-ad-slot="5275186684">
 <p>Đầu-nậu quảng-cáo lớn nhất trong Internet là Google. Google là trung-gian, nhận tiền từ những người-quảng-cáo, chia tiền đó cho những người có chỗ quảng-cáo trong Internet. Chỗ quảng-cáo trong Internet là một phần diện-tích trang web, hoặc một phần thời-gian trong YouTube video.</p>
 
 <h2>Chặn được những quảng-cáo nào?</h2>
-<p>Google có một chính-sách về những thứ không được quảng-cáo. Dưới đây là một danh-sách rút-gọn:</p>
+<p>Google có một <a href="https://support.google.com/adspolicy/answer/6008942" target='_blank'>chính-sách</a> về những thứ không được quảng-cáo. Sau đây là một danh-sách rút-gọn:</p>
 <ul>
 <li>Vi-phạm bản-quyền</li>
 <li>Các sản-phẩm hoặc dịch-vụ nguy-hiểm: chất-nổ, vũ-khí, thuốc-lá, chất gây nghiện</li>
@@ -279,7 +279,7 @@ Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc dưới bên trái khun
 <p>Ngoài việc gửi báo-cáo cho Google, tôi còn cấm tất cả những quảng-cáo từ người-quảng-cáo đó được xuất-hiện trong trang web này.</p>
 
 <h2>Cách-báo-cáo khi thấy quảng-cáo trong Facebook</h2>
-<p>Trong Facebook cũng có rất nhiều quảng-cáo. Facebook không làm trung-gian như Google, Facebook nhận tiền từ người-quảng-cáo và đặt quảng-cáo trong Facebook. Facebook có một danh-sách cấm còn dài hơn danh-sách của Google nữa, và cũng dùng máy để duyệt nên cũng sót. Tôi đã thấy một công-ty lừa-đảo mạo-danh đồng tiền Diem của Facebook đăng quảng-cáo trên Facebook 😃</p>
+<p>Trong Facebook cũng có rất nhiều quảng-cáo. Facebook không làm trung-gian như Google, Facebook nhận tiền từ người-quảng-cáo và đặt quảng-cáo trong Facebook. Facebook có một <a href="https://www.facebook.com/policies/ads/" target='_blank'>danh-sách cấm</a> còn dài hơn danh-sách của Google nữa, và cũng dùng máy để duyệt nên cũng sót. Tôi đã thấy một công-ty lừa-đảo mạo-danh đồng tiền Diem của Facebook đăng quảng-cáo trên Facebook 😃</p>
 <p>Để báo-cáo quảng-cáo vi-phạm trong Facebook mobile app cũng như trong browser thì bấm vào dấu <b>…</b> ở góc trên bên phải ô quảng-cáo rồi chọn mục báo-cáo.</p>
   <hr>
   <div class="footer">
@@ -294,9 +294,10 @@ Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc dưới bên trái khun
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -325,6 +326,7 @@ Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc dưới bên trái khun
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
