remove alternative ref to old domain

--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -3,8 +3,7 @@
 <head>
 <title>Lập kế hoạch tài chính gia đình</title>
 <meta name="description" content="Hướng dẫn lập kế hoạch tài chính gia đình. Công cụ giải quyết nhiều bài toán khó trong tài chính gia đình." />
-<meta name="keywords" content="hữu ích, kế hoạch, tài chính, gia đình, tích luỹ, hưu trí, tuổi già">
-<link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/">
+<meta name="keywords" content="hữu ích, kế hoạch, tài chính, gia đình, cá nhân, tích luỹ, hưu trí, tuổi già">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/">
 <link rel="alternate" hreflang="en" href="https://lehboi.github.io/en/fa/pfr/">
 
