--- a/kinh-nghiem/may-tinh/bat-dau-gnucash.html
+++ b/kinh-nghiem/may-tinh/bat-dau-gnucash.html
@@ -4,7 +4,6 @@
 <title>Bắt đầu GnuCash</title>
 <meta name="description" content="Hướng dẫn bạn làm quen với phần mềm GnuCash để quản lý tài chính gia đình" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
-<link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/bat-dau-gnucash">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/bat-dau-gnucash">
 
 <!-- in head of html file -->
@@ -656,9 +655,10 @@ vào cuối file <b>C:\Program Files\gnucash\etc\gnucash\environment</b>  (dùng
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -687,6 +687,7 @@ vào cuối file <b>C:\Program Files\gnucash\etc\gnucash\environment</b>  (dùng
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
