--- a/kinh-nghiem/may-tinh/tai-khoan-google.html
+++ b/kinh-nghiem/may-tinh/tai-khoan-google.html
@@ -3,9 +3,8 @@
 <head>
 <title>Tạo tài khoản Google</title>
 <meta name="description" content="Cách tạo tài khoản Google với các địa chỉ mail không phải gmail" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân">
+<meta name="keywords" content="hữu ích, tài khoản, Google">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/tai-khoan-google">
-<link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/tai-khoan-google">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
