--- a/kinh-nghiem/may-tinh/tien-ich-di-dong.html
+++ b/kinh-nghiem/may-tinh/tien-ich-di-dong.html
@@ -3,8 +3,7 @@
 <head>
 <title>Những dịch vụ tiện ích đáng chú ý của các công ty điện thoại di động</title>
 <meta name="description" content="Những tiện ích của dịch vụ điện thoại di động, tiết kiệm và tiện lợi" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân">
-<link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/tien-ich-di-dong">
+<meta name="keywords" content="hữu ích, tiện ích, di động">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/tien-ich-di-dong">
 
 <!-- in head of html file -->
