--- a/huu-ich/ke-hoach-tai-chinh/tk-t-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/tk-t-co-dinh.html
@@ -5,7 +5,6 @@
 <meta name="description" content="Tính số tiền cần góp hàng tháng để có một số tiền lớn vào một thời điểm cố định trong tương lai" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiết kiệm">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/tk-t-co-dinh">
-<link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/tk-t-co-dinh">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
@@ -263,9 +262,10 @@ cần phải để dành mỗi tháng, kết quả ghi trong ô <b>B10</b>. Số
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -294,6 +294,7 @@ cần phải để dành mỗi tháng, kết quả ghi trong ô <b>B10</b>. Số
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
