--- a/kinh-nghiem/linh-tinh/ac-dc.html
+++ b/kinh-nghiem/linh-tinh/ac-dc.html
@@ -4,7 +4,6 @@
 <title>Điện một chiều và điện xoay chiều</title>
 <meta name="description" content="Điện một chiều và điện xoay chiều" />
 <meta name="keywords" content="ac, dc, điện, một chiều, xoay chiều">
-<link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/ac-dc">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/ac-dc">
 
 <!-- in head of html file -->
@@ -270,9 +269,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -301,6 +301,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
