--- a/kinh-nghiem/may-tinh/spam.html
+++ b/kinh-nghiem/may-tinh/spam.html
@@ -3,8 +3,7 @@
 <head>
 <title>Phối hợp các cách chặn thư spam</title>
 <meta name="description" content="Phân loại thư spam và Phối hợp các cách chặn thư spam" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân">
-<link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/spam">
+<meta name="keywords" content="hữu ích, spam mail, Spamassassin">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/spam">
 
 <!-- in head of html file -->
@@ -305,9 +304,10 @@ Xem thêm ở https://antispam.vncert.gov.vn</blockquote>
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -336,6 +336,7 @@ Xem thêm ở https://antispam.vncert.gov.vn</blockquote>
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
